--- a/DebtSettlement.Web/Content/styles/createDSform.css
+++ b/DebtSettlement.Web/Content/styles/createDSform.css
@@ -1,5 +1,5 @@
 ﻿
-.form-group {
+.form-group.required .control-label:after {
     content: "*";
     color: red;
     font-size: 17px;
@@ -7,8 +7,9 @@
 }
 
 
-.control-label {
+.form-horizontal .control-label {
     display: initial;
+    text-align: left;
 }
 
 
